@@ -63,6 +63,7 @@ public class ConfigurationHandler {
 			ModIDs.ENTITY_SHIFTER_ID = configBlock(Strings.ENTITY_SHIFTER_NAME);
 			ModIDs.PLAYER_INVENTORY_ID = configBlock(Strings.PLAYER_INVENTORY_NAME);
 			ModIDs.INFINITE_WATER_SOURCE_ID = configBlock(Strings.INFINITE_WATER_SOURCE_NAME);
+			ModIDs.END_WALLS_ID = configBlock(Strings.END_WALLS_NAME);
 
 			// Armour
 			ModIDs.ENDIUM_HELMET_ID = configItem(Strings.ENDIUM_HELMET_NAME);
