@@ -34,6 +34,7 @@ public class ModIDs {
 	public static int ENTITY_SHIFTER_ID;
 	public static int PLAYER_INVENTORY_ID;
 	public static int INFINITE_WATER_SOURCE_ID;
+	public static int END_WALLS_ID;
 
 	// Armour
 	public static int ENDIUM_HELMET_ID;
