@@ -25,3 +25,4 @@ v1.4
 -Change: New recipes for Infused Gems
 -Change: New texture for filtering hoppers
 -Change: Most of the abilities granted by the endium armour won't show on the inventory screen anymore
+-Added: End Stone Brick walls and ender pearl brick walls
